# UVCap

./: CMakeLists.txt
forms/: mainwindow.ui
headers/: mainwindow.h  uvc_thread.h
src/: main.cpp  mainwindow.cpp  uvc_thread.cpp
